Fixed the index

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.0.5/utilities.min.css" integrity="sha256-sYaiE9aakpKVjJkVHf8a3mLOX6rTHxp2zMOJzXSH+Vo=" crossorigin="anonymous" />
   <style>
     .octicon{ fill: currentColor; }
-    #main { -webkit-column-count: 5; column-count: 5; -webkit-column-gap: 0; column-gap: 0;}
-    .box { padding: 7px; box-sizing: border-box; width: 256px; }
+    #gallery { -webkit-column-count: 5; column-count: 5; -webkit-column-gap: 0; column-gap: 0;}
   </style>
 </head>
 <body class="bg-gray-900">
